Habilitando 2 nics con error en envío de WSM y obstacle shadowing

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -76,18 +76,14 @@ sim-time-limit = 1000s
 #                    NIC-Settings                        #
 ##########################################################
 
-#*.connectionManager.sendDirect = true #set in true originaly
-#*.connectionManager.maxInterfDist = 2600m
-#*.connectionManager.drawMaxIntfDist = false
+*.connectionManager.sendDirect = true #set in true originaly
+*.connectionManager.maxInterfDist = 2600m
+*.connectionManager.drawMaxIntfDist = false
 
 *.**.nic[*].mac1609_4.useServiceChannel = true
 
 *.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
 *.**.nic[*].mac1609_4.bitrate = 6Mbps
-
-#*.**.nic[0].mac1609_4.macNum = 0
-#*.**.nic[1].mac1609_4.macNum = 1
-
 *.**.nic[*].phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
 *.**.nic[*].phy80211p.useThermalNoise = true
@@ -99,7 +95,7 @@ sim-time-limit = 1000s
 *.**.nic[0].phy80211p.decider = xmldoc("config2.xml")
 *.**.nic[0].phy80211p.analogueModels = xmldoc("config2.xml")
 *.**.nic[0].conectionManagerName = "conectionManager0"
-*.**.nic[0].myFreq = 2.86e9
+#*.**.nic[0].mac1609_4.macNum = true # False is 2.9 GHz
 
 *.connectionManager1.sendDirect = true #set in true originaly
 *.connectionManager1.maxInterfDist = 2600m
@@ -110,7 +106,8 @@ sim-time-limit = 1000s
 *.**.nic[1].phy80211p.decider = xmldoc("config.xml")
 *.**.nic[1].phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic[1].conectionManagerName = "conectionManager1"
-*.**.nic[1].myFreq = 5.86e9
+#*.**.nic[1].mac1609_4.macNum = true # True is 5.9 GHz
+
 *.connectionManager2.sendDirect = true #set in true originaly
 *.connectionManager2.maxInterfDist = 2600m
 *.connectionManager2.drawMaxIntfDist = false
@@ -204,7 +201,7 @@ sim-time-limit = 1000s
 *.node[*].appl.Accident_start = 700
 
 [Config WithChSw-slotted-WSM_Ns5]
-**.vector-recording = true #false
+**.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
@@ -219,15 +216,15 @@ sim-time-limit = 1000s
 
 
 *.**.nic[*].mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false
+*.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = false#${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
-*.node[63].veinsmobility.accidentStart = 305s
+*.node[63].veinsmobility.accidentStart = 301s
 *.node[63].veinsmobility.accidentDuration = 5s
-*.node[63].appl.Accident_start = 305
+*.node[63].appl.Accident_start = 301
 *.node[63].appl.MeInAcc = true
 
 sim-time-limit = 310s
@@ -235,14 +232,14 @@ sim-time-limit = 310s
 #repeat = 20
 
 [Config WithChSw-slotted-WSM_Ns7]
-**.vector-recording = true
+**.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 5
 *.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s}#0.1s#${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 300s
@@ -250,10 +247,10 @@ sim-time-limit = 310s
 
 
 *.**.nic[*].mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false
+*.node[*].appl.dataOnSch = true
 
-*.node[*].appl.Send_Per_WSM = false #${false,true}
-*.node[*].appl.sendWSA =${false,false,true !NTL}
+*.node[*].appl.Send_Per_WSM = ${false,true}
+*.node[*].appl.sendWSA = false
 
 *.node[*].veinsmobility.accidentCount = 1
 *.node[63].veinsmobility.accidentStart = 305s
@@ -263,7 +260,7 @@ sim-time-limit = 310s
 
 sim-time-limit = 310s
 
-#repeat = 20
+repeat = 20
 
 
 [Config WithChSw-TrAD-WSM]
@@ -301,7 +298,7 @@ sim-time-limit = 310s
 
 sim-time-limit = 310s
 
-#repeat = 20
+repeat = 20
 
 
 [Config WithChannelSwitching]
@@ -310,7 +307,7 @@ sim-time-limit = 310s
 *.rsu[*].appl.dataOnSch = true
 
 [Config WithChSw-slotted-WSM_Ns3_p2]
-**.vector-recording = true
+**.vector-recording = false
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3
@@ -342,7 +339,7 @@ repeat = 20
 
 [Config WithChSw-TrAD-WSM-p2]
 
-**.vector-recording = true
+**.vector-recording = false
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
@@ -374,29 +371,28 @@ repeat = 20
 
 sim-time-limit = 120s
 
-#repeat = 20
+repeat = 20
 
 [Config WithChSw-slotted-WSM_p3]
 **.vector-recording = true #false
-cmdenv-express-mode = true
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
 *.manager.firstStepAt = 90s
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-#*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
 
 *.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = true#${false,true}
+*.node[*].appl.sendWSA = false#${false,true}
 
 *.node[*].veinsmobility.accidentCount = 1
 *.node[10].veinsmobility.accidentStart = 95s
@@ -430,7 +426,7 @@ sim-time-limit = 100s
 
 [Config WithChSw-TrAD-WSM-p3]
 
-**.vector-recording = true
+**.vector-recording = false
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
@@ -454,41 +450,11 @@ sim-time-limit = 100s
 
 
 *.node[10].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 95s
+*.node[10].veinsmobility.accidentStart = 91s
 *.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95
+*.node[10].appl.Accident_start = 91
 *.node[10].appl.MeInAcc = true
 
 sim-time-limit = 100s
 
 #repeat = 20
-
-[Config WithChS-DSP-WSM-p3]
-
-**.vector-recording = true
-
-*.node[*].appl.DSP = true
-*.node[*].appl.Theta = 0.005
-*.node[*].appl.DeltaDSP = 0.005s
-
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
-#*.node[*].appl.beaconAtTime = 5s
-
-*.manager.firstStepAt = 90s
-*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
-
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
-
-*.node[*].appl.Send_Per_WSM= false
-*.node[*].appl.sendWSA = ${false,true}
-
-
-
-*.node[10].veinsmobility.accidentCount = 1
-*.node[10].veinsmobility.accidentStart = 95s
-*.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95
-*.node[10].appl.MeInAcc = true
-
-sim-time-limit = 100s
