Sistema funcionando con preblema en envío del WSM

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -1,6 +1,6 @@
  [General]
-cmdenv-express-mode = true
-cmdenv-autoflush = true
+#cmdenv-express-mode = true
+#cmdenv-autoflush = true
 cmdenv-status-frequency = 1s
 **.cmdenv-log-level = info
 
@@ -76,9 +76,9 @@ sim-time-limit = 1000s
 #                    NIC-Settings                        #
 ##########################################################
 
-*.connectionManager.sendDirect = true #set in true originaly
-*.connectionManager.maxInterfDist = 2600m
-*.connectionManager.drawMaxIntfDist = false
+#*.connectionManager.sendDirect = true #set in true originaly
+#*.connectionManager.maxInterfDist = 2600m
+#*.connectionManager.drawMaxIntfDist = false
 
 *.**.nic[*].mac1609_4.useServiceChannel = true
 
@@ -94,7 +94,7 @@ sim-time-limit = 1000s
 
 *.**.nic[0].phy80211p.decider = xmldoc("config.xml")
 *.**.nic[0].phy80211p.analogueModels = xmldoc("config.xml")
-*.**.nic[0].conectionManagerName = "conectionManager0"
+*.**.nic[0].connectionManagerName = "connectionManager1"
 #*.**.nic[0].mac1609_4.macNum = true # False is 2.9 GHz
 
 *.connectionManager1.sendDirect = true #set in true originaly
@@ -105,7 +105,7 @@ sim-time-limit = 1000s
 
 *.**.nic[1].phy80211p.decider = xmldoc("config2.xml")
 *.**.nic[1].phy80211p.analogueModels = xmldoc("config2.xml")
-*.**.nic[1].conectionManagerName = "conectionManager1"
+*.**.nic[1].connectionManagerName = "connectionManager2"
 #*.**.nic[1].mac1609_4.macNum = true # True is 5.9 GHz
 
 *.connectionManager2.sendDirect = true #set in true originaly
