--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -80,7 +80,7 @@ sim-time-limit = 1000s
 #*.connectionManager.maxInterfDist = 2600m
 #*.connectionManager.drawMaxIntfDist = false
 
-*.**.nic[*].mac1609_4.useServiceChannel = true
+*.nic[*].mac1609_4.useServiceChannel = true
 
 *.**.nic[*].mac1609_4.txPower = 300 mW #20mW, en base a TrAD
 *.**.nic[*].mac1609_4.bitrate = 6Mbps
@@ -388,8 +388,8 @@ repeat = 20
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.**.nic.mac1609_4.useServiceChannel = false#true
+*.node[*].appl.dataOnSch = false #true
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = false#${false,true}
