funciona de manera furtiva :/

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -1,6 +1,6 @@
  [General]
-#cmdenv-express-mode = true
-#cmdenv-autoflush = true
+cmdenv-express-mode = true
+cmdenv-autoflush = true
 cmdenv-status-frequency = 1s
 **.cmdenv-log-level = info
 
@@ -388,8 +388,8 @@ repeat = 20
 *.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
 
 
-*.**.nic.mac1609_4.useServiceChannel = false#true
-*.node[*].appl.dataOnSch = false #true
+*.**.nic.mac1609_4.useServiceChannel = true#false#true
+*.node[*].appl.dataOnSch = true #false #true
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = false#${false,true}
