solo funciona con 5.9 GHz, pero se tiene error por paquetes duplicados

--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -20,8 +20,8 @@ sim-time-limit = 1000s
 **.scalar-recording = true
 **.vector-recording = true
 
-**.debug = false
-**.coreDebug = false
+**.debug = true #false
+**.coreDebug = true #false
 
 *.playgroundSizeX = 2500m
 *.playgroundSizeY = 2500m
@@ -76,9 +76,9 @@ sim-time-limit = 1000s
 #                    NIC-Settings                        #
 ##########################################################
 
-#*.connectionManager.sendDirect = true #set in true originaly
-#*.connectionManager.maxInterfDist = 2600m
-#*.connectionManager.drawMaxIntfDist = false
+*.connectionManager.sendDirect = true #set in true originaly
+*.connectionManager.maxInterfDist = 2600m
+*.connectionManager.drawMaxIntfDist = false
 
 *.nic[*].mac1609_4.useServiceChannel = true
 
@@ -92,25 +92,25 @@ sim-time-limit = 1000s
 
 #Para radio de Busy tone
 
-*.**.nic[0].phy80211p.decider = xmldoc("config.xml")
-*.**.nic[0].phy80211p.analogueModels = xmldoc("config.xml")
-*.**.nic[0].connectionManagerName = "connectionManager1"
-#*.**.nic[0].mac1609_4.macNum = true # False is 2.9 GHz
+*.**.nic[0].phy80211p.decider = xmldoc("config2.xml")
+*.**.nic[0].phy80211p.analogueModels = xmldoc("config2.xml")
+*.**.nic[0].connectionManagerName = "connectionManager"
+*.**.nic[0].mac1609_4.macNum = true # False is 2.9 GHz
 
-*.connectionManager1.sendDirect = true #set in true originaly
-*.connectionManager1.maxInterfDist = 2600m
-*.connectionManager1.drawMaxIntfDist = false
+#*.connectionManager1.sendDirect = true #set in true originaly
+#*.connectionManager1.maxInterfDist = 2600m
+#*.connectionManager1.drawMaxIntfDist = false
 
 #Para radio de DSRC normal
 
 *.**.nic[1].phy80211p.decider = xmldoc("config2.xml")
 *.**.nic[1].phy80211p.analogueModels = xmldoc("config2.xml")
-*.**.nic[1].connectionManagerName = "connectionManager2"
-#*.**.nic[1].mac1609_4.macNum = true # True is 5.9 GHz
+*.**.nic[1].connectionManagerName = "connectionManager"
+*.**.nic[1].mac1609_4.macNum = true# True is 5.9 GHz
 
-*.connectionManager2.sendDirect = true #set in true originaly
-*.connectionManager2.maxInterfDist = 2600m
-*.connectionManager2.drawMaxIntfDist = false
+#*.connectionManager2.sendDirect = true #set in true originaly
+#*.connectionManager2.maxInterfDist = 2600m
+#*.connectionManager2.drawMaxIntfDist = false
 
 *.**.nic[*].phy80211p.usePropagationDelay = true
 *.**.nic[*].phy80211p.collectCollisionStatistics = true
