--- a/src/networks/Xintersection_stgo/omnetpp.ini
+++ b/src/networks/Xintersection_stgo/omnetpp.ini
@@ -92,10 +92,10 @@ sim-time-limit = 1000s
 
 #Para radio de Busy tone
 
-*.**.nic[0].phy80211p.decider = xmldoc("config2.xml")
-*.**.nic[0].phy80211p.analogueModels = xmldoc("config2.xml")
+*.**.nic[0].phy80211p.decider = xmldoc("config.xml")
+*.**.nic[0].phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic[0].connectionManagerName = "connectionManager"
-*.**.nic[0].mac1609_4.macNum = true # False is 2.9 GHz
+*.**.nic[0].mac1609_4.macNum = 0 # False is 2.9 GHz
 
 #*.connectionManager1.sendDirect = true #set in true originaly
 #*.connectionManager1.maxInterfDist = 2600m
@@ -103,10 +103,10 @@ sim-time-limit = 1000s
 
 #Para radio de DSRC normal
 
-*.**.nic[1].phy80211p.decider = xmldoc("config2.xml")
-*.**.nic[1].phy80211p.analogueModels = xmldoc("config2.xml")
+*.**.nic[1].phy80211p.decider = xmldoc("config.xml")
+*.**.nic[1].phy80211p.analogueModels = xmldoc("config.xml")
 *.**.nic[1].connectionManagerName = "connectionManager"
-*.**.nic[1].mac1609_4.macNum = true# True is 5.9 GHz
+*.**.nic[1].mac1609_4.macNum = 0 # True is 5.9 GHz
 
 #*.connectionManager2.sendDirect = true #set in true originaly
 #*.connectionManager2.maxInterfDist = 2600m
