Escenario LUST funcionando con éxito

--- a/src/networks/LuST_Scenario/omnetpp.ini
+++ b/src/networks/LuST_Scenario/omnetpp.ini
@@ -1,4 +1,4 @@
-[General]
+ [General]
 cmdenv-express-mode = true
 cmdenv-autoflush = true
 cmdenv-status-frequency = 1s
@@ -7,7 +7,7 @@ cmdenv-status-frequency = 1s
 ned-path = . 
 image-path = ../../images
 
-network = Scenario_stg1
+network = LuST_Scenario
 
 ##########################################################
 #            Simulation parameters                       #
@@ -74,15 +74,16 @@ sim-time-limit = 1000s
 #                                                        #
 #                    NIC-Settings                        #
 ##########################################################
-*.connectionManager.sendDirect = true
+
+*.connectionManager.sendDirect = true #set in true originaly
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
 *.**.nic.mac1609_4.useServiceChannel = false
 
-*.**.nic.mac1609_4.txPower = 20mW
+*.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
 *.**.nic.mac1609_4.bitrate = 6Mbps
-*.**.nic.phy80211p.sensitivity = -89dBm
+*.**.nic.phy80211p.sensitivity = -110 dBm#-89dBm, en base a TrAD
 
 *.**.nic.phy80211p.useThermalNoise = true
 *.**.nic.phy80211p.thermalNoise = -110dBm
@@ -102,6 +103,9 @@ sim-time-limit = 1000s
 *.node[*].appl.sendBeacons = true
 *.node[*].appl.dataOnSch = false
 *.node[*].appl.beaconInterval = 1s
+*.node[*].appl.beaconUserPriority = 5
+*.node[*].appl.dataUserPriority = 7
+
 
 ##########################################################
 #                      Mobility                          #
@@ -119,7 +123,7 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3
-*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #0.32 #1.45
 *.node[*].appl.beaconInterval = ${0.1s,0.5s}
 
@@ -130,7 +134,7 @@ sim-time-limit = 1000s
 *.node[*].appl.TrAD_ti = 0.005
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
-*.node[*].appl.TrAD_R = 366 
+*.node[*].appl.TrAD_R = 366 # en base a TrAD
 *.node[*].appl.beaconInterval = 0.1s # ${0.1s,0.5s}
 sim-time-limit = 1000s
 
@@ -138,7 +142,7 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 7 #5
-*.node[*].appl.Slotted_R = 500 #40
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005#1.45
 *.node[*].appl.beaconInterval = 0.1s #${0.1s,0.5s}
 
@@ -155,6 +159,7 @@ sim-time-limit = 1000s
 sim-time-limit = 1000s
 
 [Config WithoutChSw-WSA-TrAD-PerWSM]
+**.vector-recording = false
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
@@ -172,65 +177,252 @@ sim-time-limit = 1000s
 
 *.node[*].appl.Accident_start = 700
 
-[Config WithChSw-slotted-WSMper]
+[Config WithChSw-slotted-WSM_Ns5]
+**.vector-recording = true #false
 
 *.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 7
-*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
 *.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 20s
+*.manager.firstStepAt = 300s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
 
 *.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.dataOnSch = false
 
-*.node[*].appl.Send_Per_WSM = true
-*.node[*].appl.sendWSA = false
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = false#${false,true}
 
-*.node[455].veinsmobility.accidentCount = 1
-*.node[455].veinsmobility.accidentStart = 25s
-*.node[455].veinsmobility.accidentDuration = 3s
-*.node[*].appl.Accident_start = 25
+*.node[*].veinsmobility.accidentCount = 1
+*.node[63].veinsmobility.accidentStart = 305s
+*.node[63].veinsmobility.accidentDuration = 5s
+*.node[63].appl.Accident_start = 305
+*.node[63].appl.MeInAcc = true
 
-sim-time-limit = 27s
+sim-time-limit = 310s
 
-#*.annotations.draw = true
-*.manager.roiRects = "1217,481-1417,681" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+#repeat = 20
 
-[Config WithChSw-TrAD-WSMper]
+[Config WithChSw-slotted-WSM_Ns7]
+**.vector-recording = false
+cmdenv-express-mode = false
+
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 5
+*.node[*].appl.Slotted_R = 366 #500 #40 !!debe ser el mismo que *.node[*].appl.TrAD_R = 366 considerando la potencia *.**.nic.mac1609_4.txPower = 20mW estudiando las referencia de Pablo
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s}#0.1s#${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.node[*].appl.NTL_target = ${0,1,2 !NTL}
+*.node[*].appl.aware = true 
+
+
+*.manager.firstStepAt = 300s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = false
+
+*.node[*].appl.Send_Per_WSM = false #${false,true}
+*.node[*].appl.sendWSA =${false,false,true !NTL}
+
+*.node[*].veinsmobility.accidentCount = 1
+*.node[63].veinsmobility.accidentStart = 305s #320s #305s
+*.node[63].veinsmobility.accidentDuration = 5s #5s
+*.node[63].appl.Accident_start = 305# 320 #305
+*.node[63].appl.MeInAcc = true
+
+sim-time-limit = 310s
+
+repeat = 20
+
+
+[Config WithChSw-TrAD-WSM]
+
+**.vector-recording = false
 
 *.node[*].appl.TrAD = true
 *.node[*].appl.TrAD_ti = 0.005
+
 *.node[*].appl.TrAD_alpha = 10 
 *.node[*].appl.TrAD_Neig = 25
 *.node[*].appl.TrAD_R = 366 
 
-*.node[*].appl.beaconInterval = 0.5s #${0.1s,0.5s}
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
 #*.node[*].appl.beaconAtTime = 5s
 
-*.manager.firstStepAt = 20s
+*.manager.firstStepAt = 300s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
 
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 
-*.node[*].appl.Send_Per_WSM= true
-*.node[*].appl.sendWSA = false
+*.node[*].appl.Send_Per_WSM= false
+*.node[*].appl.sendWSA = ${false,true}
 
 
-*.node[455].veinsmobility.accidentCount = 1
-*.node[455].veinsmobility.accidentStart = 25s
-*.node[455].veinsmobility.accidentDuration = 3s
-*.node[*].appl.Accident_start = 25
+
+*.node[63].veinsmobility.accidentCount = 1
+*.node[63].veinsmobility.accidentStart = 305s
+*.node[63].veinsmobility.accidentDuration = 5s
+*.node[63].appl.Accident_start = 305
+*.node[63].appl.MeInAcc = true
 
 
-sim-time-limit = 27s
+
+sim-time-limit = 310s
+
+#repeat = 20
+
 
 [Config WithChannelSwitching]
 *.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = true
 *.rsu[*].appl.dataOnSch = true
 
+[Config WithChSw-slotted-WSM_Ns3_p2]
+**.vector-recording = true
 
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 3
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 110s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = ${false,true}
+
+*.node[*].veinsmobility.accidentCount = 1
+*.node[46].veinsmobility.accidentStart = 115s
+*.node[46].veinsmobility.accidentDuration = 5s
+*.node[46].appl.Accident_start = 115
+*.node[46].appl.MeInAcc = true
+
+sim-time-limit = 120s
+
+repeat = 20
+
+[Config WithChSw-TrAD-WSM-p2]
+
+**.vector-recording = true
+
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 0.005
+
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
+
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 110s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM= false
+*.node[*].appl.sendWSA = ${false,true}
+
+
+
+*.node[46].veinsmobility.accidentCount = 1
+*.node[46].veinsmobility.accidentStart = 115s
+*.node[46].veinsmobility.accidentDuration = 5s
+*.node[46].appl.Accident_start = 115
+*.node[46].appl.MeInAcc = true
+
+
+sim-time-limit = 120s
+
+#repeat = 20
+
+[Config WithChSw-slotted-WSM_p3]
+**.vector-recording = false
+cmdenv-express-mode = false
+
+#*.node[*].appl.appName = "myWaveAppLayer"
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
+
+*.node[*].appl.NTL_target = ${0,1,2 !NTL}
+*.node[*].appl.aware = true 
+
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 90s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
+
+*.node[*].veinsmobility.accidentCount = 1 #0 #1
+*.node[10].veinsmobility.accidentStart =  95s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 95#120 #95
+*.node[10].appl.MeInAcc = true
+
+sim-time-limit = 100s
+
+repeat = 20
+
+[Config WithChSw-TrAD-WSM-p3]
+
+**.vector-recording = true
+
+*.node[*].appl.TrAD = true
+*.node[*].appl.TrAD_ti = 0.005
+
+*.node[*].appl.TrAD_alpha = 10 
+*.node[*].appl.TrAD_Neig = 25
+*.node[*].appl.TrAD_R = 366 
+
+*.node[*].appl.beaconInterval = ${0.1s,0.5s}
+#*.node[*].appl.beaconAtTime = 5s
+
+*.manager.firstStepAt = 90s
+*.manager.roiRects = "1213.4,524.2-1413.4,724.2"
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = true
+
+*.node[*].appl.Send_Per_WSM= false
+*.node[*].appl.sendWSA = ${false,true}
+
+
+
+*.node[10].veinsmobility.accidentCount = 1
+*.node[10].veinsmobility.accidentStart = 95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 95
+*.node[10].appl.MeInAcc = true
+
+sim-time-limit = 100s
+
+repeat = 20
