Escenario con peatones corriendo, falta limpiar codigo e implementar actualización de posición

--- a/src/networks/Ped_scenario/omnetpp.ini
+++ b/src/networks/Ped_scenario/omnetpp.ini
@@ -7,7 +7,7 @@ cmdenv-status-frequency = 1s
 ned-path = . 
 image-path = ../../images
 
-network = Xintersection_stgo
+network = Ped_scenario
 
 ##########################################################
 #            Simulation parameters                       #
@@ -37,7 +37,7 @@ sim-time-limit = 1000s
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -46,7 +46,16 @@ sim-time-limit = 1000s
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
-*.manager.launchConfig = xmldoc("stgo1.launchd.xml")
+*.manager.launchConfig = xmldoc("pedcrossing2.launchd.xml")
+
+#*.manager.moduleType = "person=org.car2x.veins.nodes.Car *=org.car2x.veins.nodes.Car"
+#*.manager.moduleName = "person=Pednode *=node"
+#*.manager.moduleDisplayString = "person='i=veins/node/pedestrian;is=vs' *='i=veins/node/car;is=vs'"
+#*.manager.moduleType = "typePassenger=org.car2x.veins.nodes.Car ped=org.car2x.veins.nodes.Car"
+#*.manager.moduleName = "typePassenger=node ped=Pednode"
+#*.manager.moduleDisplayString = "typePassenger='i=veins/node/pedestrian;is=vs' ped='i=veins/node/pedestrian;is=vs'"
+
+
 #*.manager.roiRects = "20,20-30,30 20,20-30,30"
 
 # Número de Vehiculos
@@ -79,6 +88,8 @@ sim-time-limit = 1000s
 *.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
+
+
 *.**.nic.mac1609_4.useServiceChannel = false
 
 *.**.nic.mac1609_4.txPower = 300 mW #20mW, en base a TrAD
@@ -106,6 +117,14 @@ sim-time-limit = 1000s
 *.node[*].appl.beaconUserPriority = 5
 *.node[*].appl.dataUserPriority = 7
 
+*.Pednode[*].applType = "myWaveAppLayer"
+*.Pednode[*].appl.headerLength = 80 bit
+*.Pednode[*].appl.sendBeacons = true
+*.Pednode[*].appl.dataOnSch = false
+*.Pednode[*].appl.beaconInterval = 1s
+*.Pednode[*].appl.beaconUserPriority = 5
+*.Pednode[*].appl.dataUserPriority = 7
+
 
 ##########################################################
 #                      Mobility                          #
@@ -118,6 +137,11 @@ sim-time-limit = 1000s
 *.node[*].veinsmobility.accidentStart = 3s
 *.node[*].veinsmobility.accidentDuration = 20s
 *.node[*].appl.Accident_start = 3
+
+*.Pednode[*].veinsmobilityType.debug = true
+*.Pednode[*].veinsmobility.x = 0
+*.Pednode[*].veinsmobility.y = 0
+*.Pednode[*].veinsmobility.z = 1.895
 
 [Config WithoutChSw-slotted]
 
@@ -426,3 +450,62 @@ repeat = 20
 sim-time-limit = 100s
 
 repeat = 20
+
+[Config Ped_Crossing-slotted-WSM_p3]
+**.vector-recording = false
+cmdenv-express-mode = false
+
+#*.node[*].appl.appName = "myWaveAppLayer"
+*.node[*].appl.Slotted1Enabled = true
+*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.node[*].appl.Slotted_R = 300 #40
+*.node[*].appl.Slotted_tau = 0.005 #1.45
+
+*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
+
+*.node[*].appl.NTL_target = ${0,1,2 !NTL}
+*.node[*].appl.aware = true 
+
+#*.node[*].appl.beaconAtTime = 5s
+
+#*.manager.firstStepAt = 90s
+#*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
+
+# For Pedestrians Nodes
+*.Pednode[*].appl.Slotted1Enabled = true
+*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Pednode[*].appl.Slotted_R = 300 #40
+*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Pednode[*].appl.beaconInterval = ${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+
+*.Pednode[*].appl.NTL_target = ${0,1,2 !NTL}
+*.Pednode[*].appl.aware = true 
+
+#*.node[*].appl.beaconAtTime = 5s
+
+#*.manager.firstStepAt = 90s
+#*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+
+
+*.**.nic.mac1609_4.useServiceChannel = true
+*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.node[*].appl.Send_Per_WSM = false
+*.node[*].appl.sendWSA = ${false,false,true !NTL}
+
+
+*.node[*].veinsmobility.accidentCount = 1 #0 #1
+*.node[10].veinsmobility.accidentStart =  95s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 95#120 #95
+*.node[10].appl.MeInAcc = true
+
+sim-time-limit = 2000s
