--- a/src/networks/MoST_Scenario/omnetpp.ini
+++ b/src/networks/MoST_Scenario/omnetpp.ini
@@ -37,7 +37,7 @@ sim-time-limit = 1000s
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -49,9 +49,10 @@ sim-time-limit = 1000s
 *.manager.launchConfig = xmldoc("MoST_ped2.launchd.xml")
 #*.manager.roiRects = "4486,1875-4856,2180"
 
-#*.manager.moduleType = "person=org.car2x.veins.nodes.Car *=org.car2x.veins.nodes.Car"
-#*.manager.moduleName = "person=Pednode *=node"
-#*.manager.moduleDisplayString = "person='i=veins/node/pedestrian;is=vs' *='i=veins/node/car;is=vs'"
+*.manager.moduleType = "moped=org.car2x.veins.nodes.Car  motorcycle=org.car2x.veins.nodes.Car slowbicycle=org.car2x.veins.nodes.Car fastbicycle=org.car2x.veins.nodes.Car avgbicycle=org.car2x.veins.nodes.Car *=org.car2x.veins.nodes.Car"
+*.manager.moduleName = "moped=Bikenode motorcycle=Bikenode slowbicycle=Bicyclenode  fastbicycle=Bicyclenode avgbicycle=Bicyclenode *=node"
+*.manager.moduleDisplayString = "moped='i=veins/node/bike;is=s' motorcycle='i=veins/node/bike;is=s' slowbicycle='i=veins/node/bicycle;is=s' fastbicycle='i=veins/node/bicycle;is=s' avgbicycle='i=veins/node/bicycle;is=s' *='i=veins/node/car;is=vs'"
+
 #*.manager.moduleType = "typePassenger=org.car2x.veins.nodes.Car ped=org.car2x.veins.nodes.Car"
 #*.manager.moduleName = "typePassenger=node ped=Pednode"
 #*.manager.moduleDisplayString = "typePassenger='i=veins/node/pedestrian;is=vs' ped='i=veins/node/pedestrian;is=vs'"
@@ -150,6 +151,21 @@ sim-time-limit = 1000s
 *.Pednode[*].appl.beaconUserPriority = 5
 *.Pednode[*].appl.dataUserPriority = 7
 
+*.Bicyclenode[*].applType = "myWaveAppLayer"
+*.Bicyclenode[*].appl.headerLength = 80 bit
+*.Bicyclenode[*].appl.sendBeacons = true
+*.Bicyclenode[*].appl.dataOnSch = false
+*.Bicyclenode[*].appl.beaconInterval = 1s
+*.Bicyclenode[*].appl.beaconUserPriority = 5
+*.Bicyclenode[*].appl.dataUserPriority = 7
+
+*.Bikenode[*].applType = "myWaveAppLayer"
+*.Bikenode[*].appl.headerLength = 80 bit
+*.Bikenode[*].appl.sendBeacons = true
+*.Bikenode[*].appl.dataOnSch = false
+*.Bikenode[*].appl.beaconInterval = 1s
+*.Bikenode[*].appl.beaconUserPriority = 5
+*.Bikenode[*].appl.dataUserPriority = 7
 
 ##########################################################
 #                      Mobility                          #
@@ -167,6 +183,16 @@ sim-time-limit = 1000s
 *.Pednode[*].veinsmobility.x = 0
 *.Pednode[*].veinsmobility.y = 0
 *.Pednode[*].veinsmobility.z = 1.895
+
+*.Bicyclenode[*].veinsmobilityType.debug = true
+*.Bicyclenode[*].veinsmobility.x = 0
+*.Bicyclenode[*].veinsmobility.y = 0
+*.Bicyclenode[*].veinsmobility.z = 1.895
+
+*.Bikenode[*].veinsmobilityType.debug = true
+*.Bikenode[*].veinsmobility.x = 0
+*.Bikenode[*].veinsmobility.y = 0
+*.Bikenode[*].veinsmobility.z = 1.895
 
 [Config WithoutChSw-slotted]
 
@@ -476,63 +502,101 @@ sim-time-limit = 100s
 
 repeat = 20
 
-[Config Ped_Crossing-slotted-WSM_p3]
-**.vector-recording = false
-cmdenv-express-mode = false
+[Config Ped_Crossing-slotted-WSM]
 
-#*.node[*].appl.appName = "myWaveAppLayer"
+**.vector-recording = false
+cmdenv-express-mode = true
+
+# Service Channel
+
+*.**.nic.mac1609_4.useServiceChannel = true
+
+# Set Scenario 
+
+*.manager.firstStepAt = ${DEN=18500s,23500s,28500s,33500s,38500s,43500s} 
+*.manager.roiRects = "4735,2149-4935,2349"
+
+#########################
+#### Normal Vehicle #####
+#########################
+
 *.node[*].appl.Slotted1Enabled = true
 *.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
 *.node[*].appl.Slotted_R = 300 #40
 *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
+*.node[*].appl.beaconInterval = 50s #${NTL=0.5s,0.1s,0.1s} #0.1s#${0.1s,0.5s}
 
-*.node[*].appl.NTL_target = ${0,1,2 !NTL}
-*.node[*].appl.aware = true 
+*.node[*].appl.NTL_target = ${NTL=0}#,1,2}
+*.node[*].appl.aware = false
 
-#*.node[*].appl.beaconAtTime = 5s
-
-#*.manager.firstStepAt = 90s
-#*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
-
-
-*.**.nic.mac1609_4.useServiceChannel = true
 *.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
 *.node[*].appl.Send_Per_WSM = false
 *.node[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
 
-# For Pedestrians Nodes
+*.node[*].veinsmobility.accidentCount = 0 #0 #1
+*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 50000#120 #95
+*.node[10].appl.MeInAcc = false
+
+###########################
+#### Pedestrian Nodes #####
+###########################
+
 *.Pednode[*].appl.Slotted1Enabled = true
 *.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
 *.Pednode[*].appl.Slotted_R = 300 #40
 *.Pednode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Pednode[*].appl.beaconInterval = ${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+*.Pednode[*].appl.beaconInterval = 50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
 
 *.Pednode[*].appl.NTL_target = ${0,1,2 !NTL}
-*.Pednode[*].appl.aware = true 
+*.Pednode[*].appl.aware = false 
 
-#*.node[*].appl.beaconAtTime = 5s
+*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-#*.manager.firstStepAt = 90s
-#*.manager.roiRects = "1213.4,524.2-1413.4,724.2" #"1217,481-1427,794" #x,y-X,Y "1217.11,1217.11-481.6,481.6 1417,1417-681.6,681.6"
+*.Pednode[*].appl.Send_Per_WSM = false
+*.Pednode[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
 
-*.manager.firstStepAt = 17990s
-#*.manager.roiRects = "4486.1,1875-4856,2180"
+########################
+#### Bicycle Nodes #####
+########################
 
-*.**.nic.mac1609_4.useServiceChannel = true
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+*.Bicyclenode[*].appl.Slotted1Enabled = true
+*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bicyclenode[*].appl.Slotted_R = 300 #40
+*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = ${false,false,true !NTL}
+*.Bicyclenode[*].appl.beaconInterval = 50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+
+*.Bicyclenode[*].appl.NTL_target = ${0,1,2 !NTL}
+*.Bicyclenode[*].appl.aware = false 
+
+*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bicyclenode[*].appl.Send_Per_WSM = false
+*.Bicyclenode[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
+
+#####################
+#### Bike Nodes #####
+#####################
+
+*.Bicyclenode[*].appl.Slotted1Enabled = true
+*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+*.Bicyclenode[*].appl.Slotted_R = 300 #40
+*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
+
+*.Bicyclenode[*].appl.beaconInterval = 50s #${0.5s,0.1s,0.1s !NTL} #0.1s#${0.1s,0.5s}
+
+*.Bicyclenode[*].appl.NTL_target = ${0,1,2 !NTL}
+*.Bicyclenode[*].appl.aware = false 
+
+*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.Bicyclenode[*].appl.Send_Per_WSM = false
+*.Bicyclenode[*].appl.sendWSA = ${false,false,true !NTL} #true #${false,true}
 
 
-*.node[*].veinsmobility.accidentCount = 0 #0 #1
-*.node[10].veinsmobility.accidentStart =  95s#120s #95s
-*.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 95#120 #95
-*.node[10].appl.MeInAcc = true
-
-sim-time-limit = 100000s
+sim-time-limit = ${18510s,23510s,28510s,33510s,38510s,43510s !DEN} 
